# pyusbcameraindex

./: LICENSE  README.md  pyproject.toml
.github/workflows/: python-publish.yml
tests/: test_directshow.py
